should've fixed shifting page position when scrollbar is visible

--- a/stylesheets/cover.css
+++ b/stylesheets/cover.css
@@ -26,6 +26,10 @@ a:hover {
  * Base structure
  */
 
+html {
+  overflow-y: scroll;
+}
+
 html,
 body {
   height: 100%;
